syntax = "proto3";

package api.v1;

option go_package = "api/v1/demo";

service After {
  rpc CreateAfter (CreateAfterReq) returns (CreateAfterResp) {}

  rpc UpdateAfter (UpdateAfterReq) returns (UpdateAfterResp) {}
}

message CreateAfterReq {}

message CreateAfterResp {}

message UpdateAfterReq {}

message UpdateAfterResp {}